@@ -1,3 +1,7 @@
+* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.1
 - Removed EL6 support
 - Fixed an error in the Documentation in the module.
